--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0",
     "react-social-icons": "^6.18.0"
   },
   "devDependencies": {
